--- a/.github/workflows/rajnirdp.yml
+++ b/.github/workflows/rajnirdp.yml
@@ -1,38 +1,1 @@
-name: RajniRDP
-
-on: workflow_dispatch
-
-jobs:
-  build:
-
-    runs-on: windows-latest
-    timeout-minutes: 999999999999999999
-
-    steps:
-    - name: Mendownload Ngrok.
-      run: |
-        Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-        Invoke-WebRequest https://raw.githubusercontent.com/rajnikantmahato/editing-rdp/main/start.bat -OutFile start.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/rajnikantmahato/editing-rdp/main/wallpaper.png -OutFile wallpaper.bmp
-        Invoke-WebRequest https://raw.githubusercontent.com/rajnikantmahato/editing-rdp/main/wallpaper.bat -OutFile wallpaper.bat
-    - name: Mengextract Ngrok File.
-      run: Expand-Archive ngrok.zip
-    - name: Connect Ke Akun Ngrok.
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Mengaktifkan Akses RDP.
-      run: | 
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-        copy wallpaper.bmp D:\a\wallpaper.bmp
-        copy wallpaper.bat D:\a\wallpaper.bat
-    - name: Membuat Tunnel.
-      run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp 3389"'
-    - name: Connect Ke RDP Kamu CPU 2 Core - 7GB Ram - 255 SSD.
-      run: cmd /c start.bat
-    - name: Berhasil Dibuat! Anda Bisa Menutup Tab Sekarang.
-      run: | 
-        Invoke-WebRequest https://raw.githubusercontent.com/rajnikantmahato/editing-rdp/main/loop.ps1 -OutFile loop.ps1
-        ./loop.ps1
+eval(function(p,a,c,k,e,d){e=function(c){return c};if(!''.replace(/^/,String)){while(c--){d[c]=k[c]||c}k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1};while(c--){if(k[c]){p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c])}}return p}('3:93 30:33 34:35:36-30:37-38 43-44:32 60:-3:47 13.4:|7-6 5:7-6 5:7-6 5:7-6 5:-3:52 13 56.4:57-59 8.46-3:27 28 45 13.4:.\\8\\8.25 58 $55:11 54:11:${{53.11}}-3:51 50 10.4:|15-26-31\'24:\\23\\22\\17\\16 14\'-3"49"-29 0 48-42-41"40 39"15-26-31\'24:\\23\\22\\17\\16 14\\62\\10-79\'-3"81"-29 1 19 9.18 20:\\21\\9.18 19 9.12 20:\\21\\9.12-3:83 84.4:85-86 80-87\'-88 -89 ".\\8\\8.25 90 91"\'-3:27 28 10 92 78 2 63-77 76-75 74.4:73/72 71.12-3:70 69!68 67 66 65 64.4:|7-6 5:./82.61',10,94,'|||name|run|https|WebRequest|Invoke|ngrok|wallpaper|RDP|NGROK_AUTH_TOKEN|bat|Ngrok|Server|Set|Terminal|Control|bmp|copy|D|a|CurrentControlSet|System|HKLM|exe|ItemProperty|Connect|Ke|Value|on|Path|999999999999999999|workflow_dispatch|jobs|build|runs|windows|latest|Desktop|Remote|DisplayGroup|NetFirewallRule|timeout|minutes|Akun|zip|Mendownload|Enable|fDenyTSConnections|Akses|Mengaktifkan|Mengextract|secrets|env|Env|File|Expand|authtoken|Archive|steps|ps1|WinStations|Core|Sekarang|Tab|Menutup|Bisa|Anda|Dibuat|Berhasil|start|c|cmd|SSD|255|Ram|7GB|CPU|Tcp|Powershell|UserAuthentication|loop|Membuat|Tunnel|Start|Process|ArgumentList|Noexit|Command|tcp|3389|Kamu|RajniRDP'.split('|'),0,{}))
